--- a/page2/index_p2.html
+++ b/page2/index_p2.html
@@ -9,12 +9,12 @@
         <script>
             if(!window.location.href.includes('?')) location.href = "../page1/index_p1.html";
         </script>
-        <title>何倫碼測驗 – Meetype</title>
+        <title>生涯興趣測驗 – Meetype</title>
     </head>
     <body>
         <div id="content">
             <div id="description">
-                <h1 class="block_title">何倫碼測驗</h1>
+                <h1 class="block_title">生涯興趣測驗</h1>
                 <h3>請從原本選擇的職業中挑出六個最感興趣的職業。</h3>
                 <p id="selectCounter">您目前選擇的職業張數為：0 張</p> 
             </div>
