--- a/result/result.html
+++ b/result/result.html
@@ -29,6 +29,9 @@
                     <ul id="userSelectList">您選擇了以下職業：</ul>
                 </div>
             </div>
+            <div>
+                <p>若你在六種類型的分數差別很大，有一兩項特別高，其他都很低，表示你有明顯的興趣，區辨度高，會比較容易選出自己喜歡的職業。<br>但如果好幾個類型的喜歡程度都差不多，那表示「區辨度低」，喜好不明確，會在選擇職業的初期比較沒有方向。</p>
+            </div>
             <div class="result_block" id="theme_code_top3">
                 <div class="titleBlock">
                     <img class="titleIcon" src="../images/Top3.svg"/>
