--- a/page2/index_p2.html
+++ b/page2/index_p2.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-16"></meta>
         <link href="../styles/mainStyles.css" rel="stylesheet" type="text/css" />
+        <link href="../styles/commonStyle.css" rel="stylesheet" type="text/css" />
         <script src="../functions/selectLimit.js"></script> 
         <script src="../functions/closePopup.js"></script>
         <script src="write_p2_checkboxes.js"></script>
