--- a/result/result.html
+++ b/result/result.html
@@ -14,11 +14,11 @@
         <script type="module" src="./result_func/writeUserSelection.js"></script>
         <script type="module" src="./result_func/writeDetailDescr.js"></script>
         <script type="module" src="./result_func/writeFittingJobs.js"></script>
-        <title>何倫碼測驗結果 – Meetype</title>
+        <title>職業興趣測驗結果 – Meetype</title>
     </head>
     <body>
         <div class="titleBar" style="display: block;">
-            <h1 style="text-align: center;">您的職業興趣（何倫碼）測驗結果</h1>
+            <h1 style="text-align: center;">您的測驗結果</h1>
         </div>
         <div id="content">
             <div class="result_block" id="scoreBlock">
@@ -35,37 +35,40 @@
             </div>
             <div class="result_block" id="theme_code_top3">
                 <div class="titleBar">
-                    <img class="titleIcon" src="../images/Top3.svg"/>
+                    <!-- <img class="titleIcon" src="../images/Top3.svg"/> -->
                     <h3>您前三高分的主題及代碼</h3>
                 </div> 
             </div>
             <div class="result_block" id="detail_description">
                 <div class="titleBar">
-                    <img class="titleIcon" src="../images/Info.svg"/>
-                    <h3>詳細人格說明</h3>
+                    <!-- <img class="titleIcon" src="../images/Info.svg"/> -->
+                    <h3>讀懂你的生涯測驗分數</h3>
                 </div> 
             </div>
             <div class="result_block" id="top10_jobs">
                 <div class="titleBar">
-                    <img class="titleIcon" src="../images/Highest.svg"/>
+                    <!-- <img class="titleIcon" src="../images/Highest.svg"/> -->
                     <h3>最符合您興趣的職業Top10</h3>
                 </div>
             </div>
             <div class="result_block" id="theme_code_last">
                 <div class="titleBar">
-                    <img class="titleIcon" src="../images/Lowest.svg" />
+                    <!-- <img class="titleIcon" src="../images/Lowest.svg" /> -->
                     <h3>您最低分的主題及相關職業</h3>
                 </div>
             </div>
             <div id="read_more_block" >
                 <div class="titleBar">
-                    <img class="titleIcon" src="../images/More.svg" />
+                    <!-- <img class="titleIcon" src="../images/More.svg" /> -->
                     <h3>延伸閱讀</h3>
                 </div>
-                <h4>相關影片</h4>
+                <h4></h4>
+                <h4>相關文章</h4>
                 <div id="related_articles">
                     <ul>
+                        <li></li>
                         <li><a href="https://meetype.com/43268/careercounseling">要畢業了好焦慮？20到25歲的年輕人，最困擾的三個生涯疑問！生涯諮商會怎麼解答？</a></li>
+                        <li><a href="https://meetype.com/43732/reservation">點我預約職涯諮詢</a></li>
                     </ul>
                 </div>
                 <h4>相關影片</h4>
