--- a/result/result.html
+++ b/result/result.html
@@ -66,6 +66,12 @@
                 <h4>相關文章</h4>
                 <div id="related_articles">
                     <ul>
+                        <li><a href="https://meetype.com/44155/hollandr">實際型介紹（Holland-R）</a></li>
+                        <li><a href="https://meetype.com/44160/hollandi">研究型介紹（Holland-I）</a></li>
+                        <li><a href="https://meetype.com/44184/hollands">社交型介紹（Holland-S）</a></li>
+                        <li><a href="https://meetype.com/44188/hollande">企業型介紹（Holland-E）</a></li>
+                        <li><a href="https://meetype.com/44194/hollandc">常規型介紹（Holland-C）</a></li>
+                        <li><a href="https://meetype.com/44164/hollanda">藝術型介紹（Holland-A）</a></li>
                         <li><a href="https://meetype.com/43268/careercounseling">要畢業了好焦慮？20到25歲的年輕人，最困擾的三個生涯疑問！生涯諮商會怎麼解答？</a></li>
                         <li><a href="https://meetype.com/43732/reservation">點我預約職涯諮詢</a></li>
                     </ul>
