--- a/page1/index_p1.html
+++ b/page1/index_p1.html
@@ -6,7 +6,7 @@
         <link href="../styles/commonStyle.css" rel="stylesheet" type="text/css" />
         <script src="../functions/selectLimit.js"></script>
         <script src="../functions/closePopup.js"></script>
-        <script src="write_p1_checkboxes.js"></script>
+        <script type="module" src="write_p1_checkboxes.js"></script>
         <title>生涯興趣測驗 – Meetype</title>
     </head>
     <body>
