--- a/page2/index_p2.html
+++ b/page2/index_p2.html
@@ -6,7 +6,7 @@
         <link href="../styles/commonStyle.css" rel="stylesheet" type="text/css" />
         <script src="../functions/selectLimit.js"></script> 
         <script src="../functions/closePopup.js"></script>
-        <script src="write_p2_checkboxes.js"></script>
+        <script type="module" src="write_p2_checkboxes.js"></script>
         <script>
             if(!window.location.href.includes('?')) location.href = "../page1/index_p1.html";
         </script>
